# opensipi

./: .flake8  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  REUSE.toml  pyproject.toml
.github/workflows/: pre-commit.yml
.reuse/: dep5
docs/: Home.md
docs/Home/: Back-end-Simulation-Solvers.md  Classes.md  Developer-Manual.md  Front-end-Files-IO.md  Installation-and-Configuration.md  Integrated-Flows.md  Mid-layer-Platform.md  Overview-of-the-Application.md  Starter-Kit-for-Linux-Users.md  Starter-Kit-for-Windows-Users.md  Test-Cases.md  User-Manual.md
examples/Olympus/Script/: Olympus_PCB_xtractDCR.py  Olympus_PCB_xtractHSIO.py  Olympus_PCB_xtractLSIO.py  Olympus_PCB_xtractPDN.py
examples/Olympus/Sim_Input/Sigrity_DCR/: Sim1.csv  Special_Settings.csv  Stackup_Materials.csv
examples/WinOS/: Olympus.zip.license
opensipi/: __init__.py  file_in.py  gdrive_io.py  gsheet_io.py  integrated_flows.py  sigrity_exec.py  sigrity_tools.py  sipi_infra.py  touchstone.py
opensipi/autopwt/: autoPWT_GUI.py
opensipi/autopwt/PyCode/: generate_tcl.py  google_io.py  sim_prepare.py  tab_writter.py  utility.py
opensipi/constants/: CONSTANTS.py  __init__.py
opensipi/templates/: proc_common.tcl  temp_check.tcl  temp_materials.cmx  temp_materials.cmx.license  temp_mk_parent_spd.tcl  temp_mk_parent_spd_from_spd.tcl  temp_multiterm_ckt.tcl  temp_reorder_ports.tcl  temp_report.py  temp_run.tcl
opensipi/templates/reports/: IO_Type1.html  PDN_Type1.html  Type1.html
opensipi/util/: __init__.py  common.py  exceptions.py  logs.py
(+19 files in other folders)
