# SPDX-FileCopyrightText: © 2024 Rivos Inc.
#
# SPDX-License-Identifier: Apache-2.0

[tool.poetry]
name = "opensipi"
version = "0.1.1"
description = "An open-source Python3-based tool to automate signal integrity (SI) and power integrity (PI) related simulations."
authors = ["Yansheng Wang <yanshengw@rivosinc.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ruamel-yaml = "^0.18.5"
psutil = "^5.9.7"
matplotlib = "^3.8.2"
scikit-rf = "^1.0.0"
pdfme = "^0.4.11"
gspread = "^5.12.4"
gspread-formatting = "^1.1.2"
tabulate = "^0.9.0"
tqdm = "^4.66.1"
google-api-python-client = "^2.115.0"
numpy = "^1.26.4"
scipy = "^1.13.0"


[tool.poetry.group.dev.dependencies]
reuse = "^3.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 100

[tool.isort]
profile = "black"
